# glad

./: .gitignore  CMakeLists.txt  README.md
include/glad/: gl.h  glad.h  glad_glx.h  glad_wgl.h  glx.h  vulkan.h  wgl.h
src/: gl.c  glad.c  glad_glx.c  glad_wgl.c  vulkan.c  wgl.c
